--- a/gs-client-side-load-balancing/complete/say-hello/pom.xml
+++ b/gs-client-side-load-balancing/complete/say-hello/pom.xml
@@ -24,24 +24,25 @@
 	</properties>
 	<dependencyManagement>
 		<dependencies>
+			<!--
+      <dependency>
+        <groupId>io.servicecomb</groupId>
+        <artifactId>java-chassis-dependencies</artifactId>
+        <version>0.6.0-SNAPSHOT</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency> -->
+			<dependency>
+				<groupId>com.huawei.paas.cse</groupId>
+				<artifactId>cse-dependency</artifactId>
+				<version>2.2.39</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
 				<version>Edgware.RELEASE</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>io.servicecomb</groupId>
-				<artifactId>java-chassis-dependencies</artifactId>
-				<version>0.6.0-SNAPSHOT</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>com.huawei.paas.cse</groupId>
-				<artifactId>cse-dependency</artifactId>
-				<version>2.2.28</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
