--- a/gs-client-side-load-balancing/complete/user/pom.xml
+++ b/gs-client-side-load-balancing/complete/user/pom.xml
@@ -24,24 +24,25 @@
   </properties>
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
-        <version>Edgware.RELEASE</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
+      <!--
       <dependency>
         <groupId>io.servicecomb</groupId>
         <artifactId>java-chassis-dependencies</artifactId>
         <version>0.6.0-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
-      </dependency>
+      </dependency> -->
       <dependency>
         <groupId>com.huawei.paas.cse</groupId>
         <artifactId>cse-dependency</artifactId>
-        <version>2.2.28</version>
+        <version>2.2.39</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>Edgware.RELEASE</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -83,7 +84,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
