--- a/gs-client-side-load-balancing/complete/user/src/main/resources/application.yml
+++ b/gs-client-side-load-balancing/complete/user/src/main/resources/application.yml
@@ -8,9 +8,13 @@ server:
 say-hello:
   ribbon:
     eureka:
-      enabled: false
+      enabled: true
 #    listOfServers: localhost:8090,localhost:9092,localhost:9999
     ServerListRefreshInterval: 15000
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://127.0.0.1:8761/eureka
 zuul:
   routes:
     api:
