--- a/gs-client-side-load-balancing/complete/user/pom.xml
+++ b/gs-client-side-load-balancing/complete/user/pom.xml
@@ -24,18 +24,10 @@
   </properties>
   <dependencyManagement>
     <dependencies>
-      <!--
-      <dependency>
-        <groupId>io.servicecomb</groupId>
-        <artifactId>java-chassis-dependencies</artifactId>
-        <version>0.6.0-SNAPSHOT</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency> -->
       <dependency>
         <groupId>com.huawei.paas.cse</groupId>
         <artifactId>cse-dependency</artifactId>
-        <version>2.2.39</version>
+        <version>2.3.7</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -51,15 +43,15 @@
 
   <dependencies>
     <dependency>
-      <groupId>io.servicecomb</groupId>
+      <groupId>org.apache.servicecomb</groupId>
       <artifactId>spring-boot-starter-registry</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.servicecomb</groupId>
+      <groupId>org.apache.servicecomb</groupId>
       <artifactId>spring-boot-starter-configuration</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.servicecomb</groupId>
+      <groupId>org.apache.servicecomb</groupId>
       <artifactId>spring-boot-starter-discovery</artifactId>
     </dependency>
     <dependency>
