upgrade demo to lastest version and simplify configuration

--- a/gs-client-side-load-balancing/complete/user/src/main/resources/application.yml
+++ b/gs-client-side-load-balancing/complete/user/src/main/resources/application.yml
@@ -19,3 +19,26 @@ zuul:
   routes:
     api:
       serviceId: say-hello
+### CSE configurations #########
+APPLICATION_ID: spring-cloud-app
+service_description:
+  name: user
+  version: 0.0.1
+cse:
+  service:
+    registry:
+      address: https://cse.cn-north-1.myhwclouds.com:443
+      instance:
+        watch: false
+  config:
+    client:
+      serverUri: https://cse.cn-north-1.myhwclouds.com:443
+      refreshMode: 1
+      refresh_interval: 15000
+  rest:
+    address: 0.0.0.0:8888
+  credentials:
+    accessKey: BUDCVWSAW04UZVLSZBQR
+    secretKey: BHixEctCJFbTkPUVUUjRDSeVwMAknlAy5oB7idgR
+    akskCustomCipher: default
+### END OF CSE configurations #########
