--- a/gs-client-side-load-balancing/complete/say-hello/pom.xml
+++ b/gs-client-side-load-balancing/complete/say-hello/pom.xml
@@ -24,17 +24,18 @@
 	</properties>
 	<dependencyManagement>
 		<dependencies>
+		<!-- 
            <dependency>
                 <groupId>org.apache.servicecomb</groupId>
                 <artifactId>java-chassis-dependencies</artifactId>
                 <version>1.0.0-m2-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
+            </dependency> -->
             <dependency>
                 <groupId>com.huawei.paas.cse</groupId>
                 <artifactId>cse-dependency</artifactId>
-                <version>2.3.15</version>
+                <version>2.3.17</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
