--- a/gs-client-side-load-balancing/complete/user/pom.xml
+++ b/gs-client-side-load-balancing/complete/user/pom.xml
@@ -24,20 +24,21 @@
 	</properties>
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>org.apache.servicecomb</groupId>
-				<artifactId>java-chassis-dependencies</artifactId>
-				<version>1.0.0-m2-SNAPSHOT</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>com.huawei.paas.cse</groupId>
-				<artifactId>cse-dependency</artifactId>
-				<version>2.3.15</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
+		<!-- 
+           <dependency>
+                <groupId>org.apache.servicecomb</groupId>
+                <artifactId>java-chassis-dependencies</artifactId>
+                <version>1.0.0-m2-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency> -->
+            <dependency>
+                <groupId>com.huawei.paas.cse</groupId>
+                <artifactId>cse-dependency</artifactId>
+                <version>2.3.17</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
