--- a/gs-rest-service/complete/src/main/resources/application.yml
+++ b/gs-rest-service/complete/src/main/resources/application.yml
@@ -1,23 +1,10 @@
 server:
   port: 9090
+spring:
+  application:
+    name: spring-cloud-demo
 ### CSE configurations #########
-APPLICATION_ID: spring-cloud-app
-service_description:
-  name: spring-cloud-demo
-  version: 0.0.1
 cse:
-  service:
-    registry:
-      address: https://cse.cn-north-1.myhwclouds.com:443
-      instance:
-        watch: false
-  config:
-    client:
-      serverUri: https://cse.cn-north-1.myhwclouds.com:443
-      refreshMode: 1
-      refresh_interval: 15000
-  rest:
-    address: 0.0.0.0:9090
   credentials:
     accessKey: BUDCVWSAW04UZVLSZBQR
     secretKey: BHixEctCJFbTkPUVUUjRDSeVwMAknlAy5oB7idgR
