--- a/springcloud-sample-2-cse/springcloud-provider/Dockerfile
+++ b/springcloud-sample-2-cse/springcloud-provider/Dockerfile
@@ -1,4 +1,4 @@
-FROM 100.125.0.198:20202/hwcse/dockerhub-java:8-jre-alpine
+FROM java:8u111-jre-alpine
 
 WORKDIR /home/apps/
 ADD target/springcloud-provider-0.0.1-SNAPSHOT.jar .
